<resources>
    <string name="app_name">Quiz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="quiz">Quiz</string>
    <string name="questions_amount">Questions amount:</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">Start</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_us">Rate us</string>
    <string name="leave_feedback">Leave feedback</string>
</resources>
